Added OnCellClick for knight, tests for finding possible Knight moves, tests for BoardUtil class methods

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="white_cell">#f0d9b5</color>
     <color name="black_cell">#b58863</color>
+    <color name="possible_move_dot_fill_color">#00e676</color>
 </resources>
